# ChangeLog for razorqt-base/libqtxdg
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/razorqt-base/libqtxdg/ChangeLog,v 1.11 2013/04/05 14:40:32 ago Exp $

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libqtxdg-0.5.2.ebuild:
  Stable for x86, wrt bug #464706

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libqtxdg-0.5.2.ebuild:
  Stable for amd64, wrt bug #464706

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> libqtxdg-0.5.1.ebuild,
  libqtxdg-0.5.2.ebuild:
  Move Qt dependencies to the new category

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libqtxdg-0.5.1.ebuild:
  Stable for x86, wrt bug #452646

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libqtxdg-0.5.1.ebuild:
  Stable for amd64, wrt bug #452646

*libqtxdg-0.5.2 (19 Jan 2013)

  19 Jan 2013; Ben de Groot <yngwin@gentoo.org> +libqtxdg-0.5.2.ebuild:
  Razor-qt 0.5.2 version bump

  17 Jan 2013; Ben de Groot <yngwin@gentoo.org> -libqtxdg-0.5.0.ebuild,
  libqtxdg-0.5.1.ebuild:
  remove old

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libqtxdg-0.5.1.ebuild:
  Add ~ppc, wrt bug #449322

  29 Oct 2012; Ben de Groot <yngwin@gentoo.org> libqtxdg-0.5.0.ebuild,
  libqtxdg-0.5.1.ebuild:
  Add blocker to pkg moved old razorqt, bug #44014

*libqtxdg-0.5.1 (24 Oct 2012)

  24 Oct 2012; Ben de Groot <yngwin@gentoo.org> +libqtxdg-0.5.1.ebuild:
  Version bump

*libqtxdg-0.5.0 (15 Oct 2012)

  15 Oct 2012; Ben de Groot <yngwin@gentoo.org> +libqtxdg-0.5.0.ebuild,
  +metadata.xml:
  Initial import from qt overlay. New razor-qt 0.5.0 release.