@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=sys-apps/file qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 ) qt5? ( dev-qt/qtcore:5 dev-qt/qttools:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 dev-qt/linguist-tools:5 ) test? ( qt4? ( dev-qt/qttest:4 ) qt5? ( dev-qt/qttest:5 ) ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A Qt implementation of XDG standards
+EAPI=5
+HOMEPAGE=http://www.lxqt.org/
+IUSE=+qt4 qt5 test
+KEYWORDS=~amd64 ~x86
+LICENSE=LGPL-2.1
+RDEPEND=sys-apps/file qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 ) qt5? ( dev-qt/qtcore:5 dev-qt/qttools:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 dev-qt/linguist-tools:5 ) x11-misc/xdg-utils
+REQUIRED_USE=^^ ( qt4 qt5 )
+SLOT=0
+SRC_URI=http://lxqt.org/downloads/libqtxdg/0.5.3/libqtxdg-0.5.3.tar.xz
+_eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=c152b3323df3b8dbda28201655e399f9
