@@ -1,26 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST libqtxdg-0.5.3.tar.xz 52948 SHA256 ce45c0de4f1f5c4587178cc8a1d12561b3d101461c71ce3715ed9d5d6a6ad6f4 SHA512 02211e7fd8fc5db014e642c8222a5bade95eef5da8f60c39567cac5f4da385c7b99b454d68a6c88e211981dd98bcb1d17d53c105dcf3e7b89b17b171af904ec2 WHIRLPOOL 1f4f2bc8e6731c0fbc31dcb0f8264f7aafe329f022a74f4bf43828c8016b8af02077d9dcfd1ee0a574d7441db4ba7676dfd0f431d727059b59ccefd5fbe9b216
 DIST razorqt-0.5.1.tar.bz2 10379213 SHA256 b301cc652e48256d6dfa804d63e6cefa06bbe965c30227edb0a6726b5689d74f SHA512 736e9f38a959cb70465e9d4331c912b26ca9c0ed1e354702a29e1f10b2aec95352b96c6af24022f447bc9526a4f6c77b10aa59cac620837c8355c99884323521 WHIRLPOOL 24dc1cf7366bf1843e65e5dc0286909e9b8f7a0de1bb1ebf189df803afeadb09c8a022c86e4272ea0b5d71b8f9608e0000e4d128dcf97c75d656d67f45a90120
 DIST razorqt-0.5.2.tar.bz2 10467996 SHA256 ac8a890eba7a24a20a2c0ea7a5020c6001853997c1e1b1b927ff4700b0e0e1ad SHA512 eea32c93cefea580dba269167fa7d8b3ff44f1ef025cc46c42a6e3da414d0b3d1c90ed074bcf37e5869f8bff1565dfd446496afb535a2a63d59617fe08a45370 WHIRLPOOL 2868c6d1f167d5d533559e1d0aa458bfa5a81fe55f7eda49840b452fdc9a55df25f77fb28c0a671d0ac021f7518a18ac02bc13f82279066f773e67d015505ef3
 EBUILD libqtxdg-0.5.1.ebuild 830 SHA256 fedfcc40fb0e14230bf4093daa35df4344c1c322baebc14228e8435fe4074b1c SHA512 608956a74cb7bf56d3c19db5560e4a3a44d5bb1e8a14cc9b32b8502e41e9ddad6e2a2b772a9b69a12dd3e6d6798dc6e915f683759333c934909a2e95a2500c40 WHIRLPOOL 9eee571b71eadea0a1091bdf33c5dbe5a346f97b587bbd0894d334d841591a0d92bec1ba300a3b1a684ce630462b31377fe52d7504e9868e93c733a90c79dc95
 EBUILD libqtxdg-0.5.2.ebuild 831 SHA256 bbdf77cfdf4dc8a80e07550b4148d67937d1b6ab408e12d27c2e453eef67c472 SHA512 955b8f95814ea84419ed9be3b66c4f853ad01cb310ea55ca672374dcb55fd39fda13610983cf2a84398f02d4dda21433c7bc7dadfc9ed9a3d1a46c1728fa8faa WHIRLPOOL 36f335376e09b8406976a160c48c575ab9cc3725257d39761055b89fea6e9d844ff6739e8f4cdcee667d8bc090a3d0fab435a2062d549cd1b0ac28b241da5b25
-MISC ChangeLog 1585 SHA256 420d73044d4d53f76e4b934fa5b94f6e8d7a3a20744d01adbf4ab39e57732f2c SHA512 56f20cb03b25ac1bcfc041eaa618b059c94b6b3c938b70f798d9037c385702904ed8eb04dec677a1310e6dc22f19e94ef34269eca03ffe4a0f908af32596296c WHIRLPOOL a5bcc0338818476160ba13f28909fe22ac19a9c3f4d4f786aa972c40b46a61191999502b0718217a4282538a2bba4b5afe3bff53da6622fe1485d120f8a16e47
-MISC metadata.xml 157 SHA256 a2ffc792d4df94c3f8088e329c4bf74804540c2797f3e24ab0030acbdfd4b535 SHA512 9f259ee8df00db96dd396c6c886624c53728c3e26f28071cc1f9a286798271cdfac3485a081d308c93ff3067cb6568f9ea55ca164334abeee776491307244213 WHIRLPOOL bcb16b3d9ab21125e5581aed1225d2b399015d76bc7c6f9deae53e2e38fffdc47e0b5aae9bd632e85db242a37b4de5aa05d6f97c087cad085df9390530a0a597
+EBUILD libqtxdg-0.5.3.ebuild 1082 SHA256 87dd7087c05328351af4e569cc6ae2dc8bbde961f5921c942c8bec7dbebd38b1 SHA512 32f7e5efcd8db45376ceb891669d2d5cbe304dc092056f91df1d7f01113ec48ab42a5fa264449b4c1020bfeff0d99d7aeab4f17afcb8cfb3a0339ec8abf93754 WHIRLPOOL a963ed1ef86488ab5e7a1ded0a6ba5772e9b688c61c2ee91a06b5a4e3cb9adf50ec278201f77e537d7f437cea17bfb0fb84ab8800809a838548fc3db8ef46e1b
+MISC ChangeLog 1777 SHA256 f7c916e323f3ed04f5481ca8e5d6f277b924c8d527bfbd72b8e00f4abe780d8c SHA512 6ab810a8e615c7132c1d9247ad3e306caaf330ba0b285d5249abde161c35b587f4daa8741772b46de5ae1908574eb77c35b65245d21bbde0179f9a022bfd2326 WHIRLPOOL 5b6654e85cf0db5ca5cc851bb71bf5d9e61411b52c300a52f4624f71121e759f53f171a2517433ad00128373edbbdab11d8e6a96ce547d9da626a54f51f1179b
+MISC metadata.xml 177 SHA256 857eca5b9a8e516194fbae0e574b685df4be6fb8110aa8db32f9fb2f10a12f54 SHA512 b65edffa84be55789606939701fb2c052cb3cd71144641177ace4a98495a8ded9fb7da0c7b7dc9b6a57f3d2f2df1bdc71fcb35245d1aa37d49395fe62a26d20b WHIRLPOOL b10d77d6c0ab4024ab6ee3f3b3de2f4738ea4c73fd75b2082fd6568ddd8568193881dacc9bc7f7e0ff8615fefa6b2da2319dc07bc8a58e3a95034ef8a61423a3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRXuJiAAoJELp701BxlEWf0rkP/RJUWGNVEntExp9WKLsVx+Yo
-c6YRHm3k9vurZHFjmY0sW0wC5JsKlq3trgiM8c3gzd43SetPhqEpWZjMEv5mZvZw
-8n54qL4vvpKWD02fyWvYQR/JlKlEHOnfaKB92qro9yBJxByNMvOkwKDpFPc0VqkG
-SzgZ9TUFb0SHSb8JPREqcF8ROzd/u/2JZZAJvXHUFxmuQLOSOaMhoR0oupBNg0jn
-OxGzvaz61IXD2I8l3fc/6bDjXptWxVXAaMfAPs5jz/6LhNy336auLRGnRmVbgpGo
-SkMZMpZVdT7Gd1uFFMF4q+ifYrR9Tnp9cyiRYPKpFrc79p/PD87t57kltUaZiNck
-dulHYw5lPIBN0ne7a1qXDjjCCjnywDFTMn5JrBUGu41H02yriSEiFtCd7ZWkgcdH
-OxZJcUZ5j1SVt2VXzZc143AqvblBYFPEdW8QVGDFVtIweo0nz0DEBaY7OwsmQjjD
-0OtgAaptkT+bc5O6TZJ9zHJI4j7kf4b/dwLiaxWcvoHs2GFDqwq4TJq0Bl2hzrpD
-EYROUKO7q/ug6iJ8hBiMV5oQH7KGs8Y4+PtJrDQfr+IjFWfRj7pwRDFrCtl399sC
-AiVc8g0+5zr1CaTmqqJNX9vosVGiXGYL0jIZNZioqt+p3LMXODR4NPg95923zlQC
-XJWG0ycW+OAia7r7e8p0
-=2cWQ
+iQIcBAEBCAAGBQJTgcZmAAoJELvuk32y76HUs2YP/0tARykwYtbx81Wv3wm5k1Kt
+lhWHXT4jibtlaIafXeRK9yJchy5Vh3TDKqlv/Mgg9+E5kkk07iUtddSM4pE9M9SH
+oU/5FTq0amxZYa2OWqsCmgKvBfXou5LqgI51QXCYO1m4HTNUQR8w15AhloeResHD
+Pp9ym68CNRhZK9lQyVUEqy6lb1E4thc2JsIUTElEEr2k6SCj5FhjUBq/tJRS3wcL
+K/9SNp7hXqzmzUQmhfA6h482IGJPF4bJRsqLiwd+Cq2BTdo3oxrzuXEbH5O5fMwT
+LuZHIOsDa4rHLTb7UZchU8u9tmO0bR3Xe3SKkSbiBfR/PuY/XEPEhjdwIHl+TY3x
+s2DqR7isMFAWXwn+7K35fEuNQr4Svfz8huGvwbCQ7BaInWMozx2B1pwi4f6yJGHo
+A43lgO1OTKiXwyd/QzCw6uzm3fOVVrfbQQ2cZSsoOD+NrBOhKroTsPpxgt6+8eLb
+V931ilaRRjJncq1X+0/WAzc032HIWCD+6+iCtOp7L041qVBEDBn/sU4/5XodHapZ
+N2pF+6m8DUfvLfqGfn/AIBpX+yQS5S10aTGoeLWxBmpOnOpLa/2raVgu7VRrLeC4
+OeBoFmzuGDye6PektviZn6wlXlTmdvyHyqz3vqjADeiMM6maTLpM/omG99Vcgnob
+MXNLUNxmwgcTlI9OGCFO
+=z7w4
 -----END PGP SIGNATURE-----
