@@ -1,6 +1,12 @@
 # ChangeLog for razorqt-base/libqtxdg
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/razorqt-base/libqtxdg/ChangeLog,v 1.11 2013/04/05 14:40:32 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/razorqt-base/libqtxdg/ChangeLog,v 1.12 2014/05/25 10:30:54 jauhien Exp $
+
+*libqtxdg-0.5.3 (25 May 2014)
+
+  25 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> +libqtxdg-0.5.3.ebuild,
+  metadata.xml:
+  version bump, thanks to Harvey Mittens and Davide Pesavento
 
   05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libqtxdg-0.5.2.ebuild:
   Stable for x86, wrt bug #464706
